<resources>
    <string name="app_name">Giua_ki</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="cart">cart</string>
    <string name="order">Order</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="searchItem">Tìm kiếm sản phẩm</string>
    <string name="home">Trang chủ</string>
    <string name="trangcanhan">Trang cá nhân</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="donhang">Đơn hàng</string>
    <string name="emptyCart">Giỏ hàng rỗng</string>
    <string name="gioHang">Giỏ hàng của bạn</string>
    <string name="diaDiemGiaoHang">Địa chỉ nhận hàng</string>
    <string name="manthien">97 Man Thiện</string>
    <string name="phone">Số điện thoại</string>
    <string name="phone1">0966666666</string>
    <string name="tomtat">Tóm tắt thanh toán</string>
    <string name="giatien">Giá tiền</string>
    <string name="phigiaohang">Phí ship</string>
    <string name="tongThanhToan">Tổng</string>
    <string name="tienMat">Thanh toán khi nhận hàng</string>
    <string name="datHangNgay">Đặt đơn</string>
    <string name="phiGiaoHang">20,000đ</string>
    <string name="giatxtprice">"Giá : "</string>
    <string name="del_product_cart">Xóa sản phẩm khỏi giỏ hàng</string>
    <string name="confirm_del_product_cart">Bạn có chắc chắn muốn xóa sản phẩm khỏi giỏ hàng?</string>
    <string name="co">Có</string>
    <string name="no">Không</string>
    <string name="color_selected_size">#94a3b8</string>
    <string name="qr_saved">QR Code đã được lưu trước đó</string>
    <string name="qr_save">QR Code đã được lưu</string>
    <string name="scan_qr">Quét mã QR</string>
    <string name="name_host">Tên người nhận : Nguyễn Tiến Nhật</string>
    <string name="price_bank">Số tiền :</string>
    <string name="note_bank">"Mô tả : "</string>
    <string name="cantfind">Không tìm thấy giao dịch, hãy kiểm tra kĩ và thử lại !</string>
    <string name="time_con_lai">"Thời gian còn lại: "</string>
    <string name="nhap_dia_chi">Vui lòng nhập địa chỉ</string>
    <string name="nhap_phone">Vui lòng nhập số điện thoại</string>
    <string name="phone_fail">Số điện thoại không hợp lệ</string>
    <string name="payment_method">Chọn phương thức thanh toán</string>
    <string name="thanh_toan_thanh_cong">Thanh toán thành công</string>
    <string name="don_hang_dang_xu_ly">Đơn hàng của bạn đang được xử lý.</string>
    <string name="thong_tin">Thông tin</string>
    <string name="thanh_cong">Thành công</string>
    <string name="them_sp_thanh_cong">Thêm sản phẩm vào giỏ hàng thành công!</string>
    <string name="che_do_toi">Chế độ tối</string>
    <string name="tim_kiem_ca_phe">Tìm kiếm cà phê</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="chon_size">Chọn size</string>
    <string name="so_luong">Số lượng</string>
    <string name="_1">1</string>
    <string name="them_gio_hang">Thêm vào giỏ hàng</string>
    <string name="tro_ve">Trở về</string>
    <string name="luu_qr">Lưu QR</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="empty_cart">Giỏ hàng rỗng</string>
    <string name="thay_doi">Thay đổi</string>
    <string name="cach_thanh_toan">Phương thức thanh toán</string>
    <string name="chi_tiet_don_hang">Chi tiết đơn hàng</string>
    <string name="don_hang_cua_ban">Đơn hàng của bạn</string>
    <string name="chon_size_khi_them_vao_cart">Chọn Size trước khi thêm vào giỏ hàng</string>
    <string name="them_vao_cart_thanh_cong">Đã thêm sản phẩm vào giỏ hàng</string>
</resources>