<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:padding="10dp"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_left"/>
        <TextView
            android:id="@+id/txtCartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/don_hang_cua_ban"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/archivo_black"
            />
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardView"

        android:layout_above="@id/llBuy">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="9"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:fontFamily="@font/archivo_black"
                            android:text="@string/diaDiemGiaoHang" />
                        <ImageView
                            android:id="@+id/ivUpdateAddress"
                            android:layout_width="0dp"
                            android:layout_height="32dp"
                            android:layout_weight="1"
                            android:src="@drawable/location_refresh" />
                        <ImageView
                            android:id="@+id/ivEditAddress"
                            android:layout_width="0dp"
                            android:layout_height="32dp"
                            android:layout_weight="1"
                            android:src="@drawable/edit" />
                    </LinearLayout>
                    <EditText
                        android:enabled="false"
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/manthien"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chi_tiet_don_hang"
                    android:fontFamily="@font/archivo_black"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewOrder"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:padding="12dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/phigiaohang" />

                    <TextView
                        android:id="@+id/tvPhiGiaoHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/phiGiaoHang" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/cach_thanh_toan"
                        android:textColor="@color/black"
                        android:fontFamily="@font/archivo_black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thay_doi"
                        android:fontFamily="@font/archivo_black"
                        android:id="@+id/tvChangePayment"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="12dp"
                        android:textColor="#826045"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ivPayment"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/cash" />
                    <TextView
                        android:id="@+id/payment_methods"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp"
                        android:fontFamily="@font/archivo_black"
                        android:text="@string/tienMat" />
                </LinearLayout>

            </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/llBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/tongThanhToan"
                    android:fontFamily="@font/archivo_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/phiGiaoHang"
                    android:textColor="@color/black"
                    android:fontFamily="@font/archivo_black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="#846046"
            android:layout_margin="10dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/datHangNgay" />
    </LinearLayout>
</RelativeLayout>
