<!-- res/layout/fragment_cart.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="#838FD3"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtCartTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/gioHang"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtCartTitle"
        android:layout_above="@id/llBuy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/diaDiemGiaoHang" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:enabled="false"
                            android:id="@+id/edtAddress"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:layout_marginTop="8dp"
                            android:text="@string/manthien"/>
                        <ImageView
                            android:id="@+id/ivEditAddress"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/edit"/>
                    </LinearLayout>
                    <TextView
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:enabled="false"
                            android:id="@+id/edtPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:layout_marginTop="8dp"
                            android:inputType="phone"
                            android:text="@string/phone1"/>
                        <ImageView
                            android:id="@+id/ivEditPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/edit"/>
                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomtat"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/background_tom_tat_thanh_toan"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/giatien"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/phigiaohang"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <!--   <TextView
                           android:id="@+id/textView3"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="8dp"
                           android:text="Giảm giá"
                           app:layout_constraintStart_toStartOf="@+id/textView2"
                           app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

                    <TextView
                        android:id="@+id/tvGiaTien"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/giatien"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView" />

                    <TextView
                        android:id="@+id/tvPhiGiaoHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/phiGiaoHang"
                        app:layout_constraintEnd_toEndOf="@+id/tvGiaTien"
                        app:layout_constraintTop_toBottomOf="@+id/tvGiaTien" />

                    <!--    <TextView
                            android:id="@+id/tvGiamGia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Giảm nếu tt = QR"
                            app:layout_constraintEnd_toEndOf="@+id/tvPhiGiaoHang"
                            app:layout_constraintTop_toBottomOf="@+id/tvPhiGiaoHang" />-->

                    <View
                        android:id="@+id/view"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tongThanhToan"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/tvTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tongThanhToan"
                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView7" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
    android:id="@+id/llBuy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/cash" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/payment_methods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tienMat" />
            <TextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tongThanhToan"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/ivEllipsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipsis" />
    </LinearLayout>

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C67C4E"
            android:text="@string/datHangNgay" />
</LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/txtEmptyCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Giỏ hàng rỗng"
        android:gravity="center"
        android:layout_below="@+id/txtCartTitle"
        android:textSize="18sp" />

</RelativeLayout>
