<!-- qr_layout.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Ảnh QR Code -->
    <ImageView
        android:id="@+id/qrImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/error_image" />
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qrImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeTextView"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:src="@drawable/back"
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tro_ve" />

        <ImageButton
            android:src="@drawable/downlod"
            android:id="@+id/btnSaveQR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/luu_qr" />

        <ImageButton
            android:src="@drawable/success"
            android:id="@+id/successButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/da_thanh_toan" />
    </LinearLayout>


</RelativeLayout>
